prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  #annotations:
  #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.kubernetes.cn
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
